test_fixtures/for/class_in_body.lox
// ParserError: UnexpectedExpressionToken found Class from l2c10 to l2c15
for (;;) class Foo {}
